<package format="3">
  <name>hsrb_gazebo_bringup</name>
  <version>2.4.0</version>
  <description>ガゼボシミュレーションのための起動スクリプト</description>

  <maintainer email="xr-hsr-support@mail.toyota.co.jp">HSR Support</maintainer>

  <license>BSD 3-clause Clear License</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>hsrb_base_controllers</exec_depend>
  <exec_depend>hsrb_description</exec_depend>
  <exec_depend>hsrb_gripper_controller</exec_depend>
  <exec_depend>hsrb_gz_ros2_control</exec_depend>
  <exec_depend>hsrc_description</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>tmc_gz_plugins</exec_depend>
  <exec_depend>tmc_launch_ros_utils</exec_depend>
  <exec_depend>tmc_odometry_switcher</exec_depend>
  <exec_depend>tmc_realtime_controllers</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>